--- a/pom.xml
+++ b/pom.xml
@@ -89,4 +89,15 @@
     <version>1.2.62</version>
 </dependency>
   </dependencies>
+ <build>  
+        <plugins>  
+            <plugin>  
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot-maven-plugin</artifactId>              
+                <configuration>                
+                    <mainClass>com.lemon.Starter</mainClass>
+                </configuration>  
+            </plugin>  
+        </plugins>  
+    </build> 
 </project>
